# tcplp_feather_express_nrf52840

./: CMakeLists.txt  Kconfig  README.md  connector.conf  gdbinit  overlay-usb.conf  prj.conf  usb.overlay
assets/: ot_tcp_benchmark_cmds.txt
src/: common.h  main.c
